Bug 258572 - usr.sbin/i2c: Fix options handling
Summary: usr.sbin/i2c: Fix options handling
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Many People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords: needs-qa
Depends on:
Blocks:
 
Reported: 2021-09-18 15:08 UTC by Martin Birgmeier
Modified: 2021-10-07 06:06 UTC (History)
2 users (show)

See Also:
koobs: maintainer-feedback? (phk)
koobs: mfc-stable13?
koobs: mfc-stable12?


Attachments
patch to usr.sbin/i2c/i2c.c to fix options handling (666 bytes, patch)
2021-09-18 15:08 UTC, Martin Birgmeier
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Birgmeier 2021-09-18 15:08:53 UTC
Created attachment 227982 [details]
patch to usr.sbin/i2c/i2c.c to fix options handling

In FreeBSD main at 08b9cc316a319fba95af8bb13b262fe0d5526ec3, the option handling of i2c is broken. Improve it.

-- Martin
Comment 1 Poul-Henning Kamp freebsd_committer freebsd_triage 2021-09-20 05:24:37 UTC
Looks ok.

Sorry for messing that up.
Comment 2 commit-hook freebsd_committer freebsd_triage 2021-10-07 06:05:34 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=67bceb38f463d8a929c55efdcfcfefc9aedfeff6

commit 67bceb38f463d8a929c55efdcfcfefc9aedfeff6
Author:     Martin Birgmeier <d8zNeCFG@aon.at>
AuthorDate: 2021-10-07 05:20:56 +0000
Commit:     Robert Wing <rew@FreeBSD.org>
CommitDate: 2021-10-07 05:56:20 +0000

    i2c(8): fix option handling

    Recognize the '-o' option when processing command line arguments.

    Fixes:  9c10d00bf8cd ("i2c(8): Add interpreted mode for batch/scripted...")
    PR:     258572

 usr.sbin/i2c/i2c.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)