i2c(8): fix option handling

Recognize the '-o' option when processing command line arguments.

Fixes:  d09e922f26c0 ("i2c(8): Add interpreted mode for batch/scripted...")
PR:     258572